packages/components/bolt-dropdown/src/dropdown.scss
/* ... */
[aria-expanded] ~ .c-bolt-dropdown__label,
[aria-expanded] ~ .c-bolt-dropdown__toggle {
  display: none;
}


.c-bolt-dropdown__header-link {
  right: 0;
  cursor: default;
  display: none;
  position: absolute;
  top: 0;
  width: 1px;
  height: 1px;
  z-index: 10;

  &:focus {
    outline-offset: -6px;
    width: 25px;
    height: 38px;
    outline: 3px solid #c1e0fe;
    outline: 3px solid rgba(131, 192, 253, .5);
    outline-offset: 1px;
  }
}


.c-bolt-dropdown__toggle--open {
  display: block;
}
.c-bolt-dropdown__state:target + .c-bolt-dropdown .c-bolt-dropdown__toggle--open,
.c-bolt-dropdown__state:checked + .c-bolt-dropdown .c-bolt-dropdown__toggle--open {
  display: none;
}


.c-bolt-dropdown__toggle--close {
  display: none;
}

.c-bolt-dropdown__state:target + .c-bolt-dropdown .c-bolt-dropdown__toggle--close,
.c-bolt-dropdown__state:checked + .c-bolt-dropdown .c-bolt-dropdown__toggle--close {
  display: block;
}
.c-bolt-dropdown__state:target+.c-bolt-dropdown .c-bolt-dropdown__toggle--close {
  // height: 50px;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
}


.c-bolt-dropdown__content {
  overflow: auto;
  transition: all .2s cubic-bezier(0, 0, .3, 1) .1s;
  position: relative;
  box-shadow: 0 1px 2px 1px rgba(6, 10, 36, 0.1);
  left: 0;
  width: 100%;
  z-index: 1;
  transform: translateY(-100px);
  display: none;
  height: 0;

  &[data-open]:not([style*="height"]) {
    transition: none;
    height: auto;
    visibility: visible;
  }

  &:not([role="region"]){
    max-height: 0px; // Height of bar
    visibility: hidden;
    display: block;
    height: auto;
  }

  .c-bolt-dropdown--collapse\@small & {
    @include respond-to(small) {
      max-height: none;
      visibility: visible;
      display: block;
      height: auto;
      transform: translate3d(0, 0, 0);
    }
  }
}


.c-bolt-dropdown__header-icons {
  margin-top: bolt-spacing(small) * -1;
  margin-bottom: bolt-spacing(small) * -1;
  margin-right: bolt-spacing(medium) * -1;
  position: relative;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  overflow: hidden; // so transformed icons don't spill out
  flex-shrink: 0; // for when there is a very long title - adds left/right spacing

  &:before {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 1px;
    opacity: .1;
    background-color: currentColor;
    background-color: var(--bolt-theme-heading-link-default, currentColor);
    content: '';

    .c-bolt-dropdown__header--center & {
      display: none;
    }
  }
}

.c-bolt-dropdown__header-icons-inner {
  transform: rotate(0deg);
  transition: transform .2s ease;
}


.c-bolt-dropdown__header-icon {
  display: inline-block;
  vertical-align: middle;
  font-size: 1.5rem;
  padding: calc(1.5rem / 2);
  // height: 3rem;
  // width: 3rem;
  line-height: 0; // Workaround to line-height messing up icon alignment
  position: relative;
  transition: opacity .2s ease;
  // transform-style: preserve-3d;
  // transform-origin: center center;

  & ~ * {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%) rotate(180deg);
  }
}

// .c-bolt-dropdown__header-icon--close {
//   // opacity: 1;
//   transform: rotate(180deg);
//   z-index: 900;
// }


// .c-bolt-dropdown__header-icon--open {
//   // opacity: 0;
//   // float: none;
//   // position: absolute;
//   // top: 0;
//   // left: 0;
//   // z-index: 800;
//   // width: inherit;
//   // height: inherit;
//   // border: 1px solid #ccc;
//   // background: #333;
//   // text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
//   // z-index: 1000;
//   transform: rotate(0deg);
// }

[aria-expanded="false"] {
  .c-bolt-dropdown__header-icons-inner {
    transform: rotate(0deg);
  }
  .c-bolt-dropdown__header-icon--open {
    opacity: 1;
  }
  .c-bolt-dropdown__header-icon--close {
    opacity: 0;
  }
}

[aria-expanded="true"]{
  .c-bolt-dropdown__header-icons-inner {
    transform: rotate(179.5deg);
  }

  .c-bolt-dropdown__header-icon--open {
    opacity: 0;
    // transform: translate3d(-50%, -50%, 0px) rotate(179deg);
  }

  .c-bolt-dropdown__header-icon--close {
    opacity: 1;
    // transform: translate3d(-50%, -50%, 0px) rotate(360deg);
  }
}





// .c-bolt-dropdown[role="presentation"]{
//   .c-bolt-dropdown__header--open {
//     .c-bolt-dropdown__header-icon--close {
//       opacity: 0;
//     }

//     .c-bolt-dropdown__header-icon--open {
//       opacity: 1;
//     }
//   }

//   .c-bolt-dropdown__header--open {
//     .c-bolt-dropdown__header-icon--close {
//       opacity: 0;
//     }
//     .c-bolt-dropdown__header-icon--open {
//       opacity: 1;
//     }
//   }
// }

.c-bolt-dropdown__state:target + .c-bolt-dropdown .c-bolt-dropdown__content,
.c-bolt-dropdown__state:checked + .c-bolt-dropdown .c-bolt-dropdown__content {
  visibility: visible;
  max-height: 250px;
  transition: all .2s cubic-bezier(0, 0, .3, 1) .1s;
  visibility: visible;
  transform: translate3d(0, 0, 0);
  transition: transform 300ms ease, height 300ms ease;
}


.c-bolt-dropdown__content--open {
  display: block;
  transition: height 0.2s ease;
  transform: translate3d(0, 0, 0);
}

.c-bolt-dropdown__content--opened {
  overflow: visible;
}
/* ... */

